# Msc-project

./: README.md
OpenXR-OpenGL-model/: CMakeLists.txt  README.md  main.cpp
OpenXR-OpenGL-model/shaders/: basic.frag  rtt.frag
